// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > NavBarMenu Matches snapshot when boolean prop "isImpersonation" is set to: "false" 1`] = `
<styled.a
  isImpersonation={false}
  user={
    Object {
      "email": "jest-auto-snapshots String Fixture",
      "name": "jest-auto-snapshots String Fixture",
    }
  }
>
  <styled.div>
    <styled.div>
      jest-auto-snapshots String Fixture
    </styled.div>
    <styled.div>
      jest-auto-snapshots String Fixture
    </styled.div>
  </styled.div>
  <styled.div
    avatar="https://s3.amazonaws.com/buffer-ui/Default+Avatar.png"
  />
  <styled.div>
    <ChevronDownIcon
      color="grayLight"
      size="large"
    />
  </styled.div>
</styled.a>
`;

exports[`jest-auto-snapshots > NavBarMenu Matches snapshot when passed all props 1`] = `
<styled.a
  isImpersonation={true}
  user={
    Object {
      "email": "jest-auto-snapshots String Fixture",
      "name": "jest-auto-snapshots String Fixture",
    }
  }
>
  <styled.div>
    <styled.div
      aria-label="You are impersonating a user"
      user={
        Object {
          "email": "jest-auto-snapshots String Fixture",
          "name": "jest-auto-snapshots String Fixture",
        }
      }
    >
      Impersonating
    </styled.div>
    <styled.div>
      jest-auto-snapshots String Fixture
    </styled.div>
    <styled.div>
      jest-auto-snapshots String Fixture
    </styled.div>
  </styled.div>
  <styled.div
    avatar="https://s3.amazonaws.com/buffer-ui/Default+Avatar.png"
  />
  <styled.div>
    <ChevronDownIcon
      color="grayLight"
      size="large"
    />
  </styled.div>
</styled.a>
`;

exports[`jest-auto-snapshots > NavBarMenu Matches snapshot when passed only required props 1`] = `
<styled.a
  isImpersonation={false}
  user={
    Object {
      "email": "jest-auto-snapshots String Fixture",
      "name": "jest-auto-snapshots String Fixture",
    }
  }
>
  <styled.div>
    <styled.div>
      jest-auto-snapshots String Fixture
    </styled.div>
    <styled.div>
      jest-auto-snapshots String Fixture
    </styled.div>
  </styled.div>
  <styled.div
    avatar="https://s3.amazonaws.com/buffer-ui/Default+Avatar.png"
  />
  <styled.div>
    <ChevronDownIcon
      color="grayLight"
      size="large"
    />
  </styled.div>
</styled.a>
`;
